guilds_service/deployments/kubernetes/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: guilds-service
spec:
  hosts:
    - guilds-service
  http:
    - route:
        - destination:
            host: guilds-service
            port:
              number: 8080
